feat: add body data measures input form, display table, endpoint, schemas
